versioned_docs/version-3.0/singular.md
---
title: "Singular"
description: "Integrate Singular with Adapty to analyze marketing and subscription data."
metadataTitle: "Singular Integration Guide | Adapty Docs"
---

import Zoom from 'react-medium-image-zoom';
import 'react-medium-image-zoom/dist/styles.css';

[Singular](https://www.singular.net/) is one of the leading Mobile Measurement Partner (MMP) platforms, that collects and presents data from marketing campaigns. This helps companies track their campaign performance. 

Adapty provides a complete set of data that lets you track [subscription events](events) from stores in one place. With Adapty, you can easily see how your subscribers are behaving, learn what they like, and use that information to communicate with them in a way that's targeted and effective. Therefore, this integration allows you to track subscription events in Singular and analyze precisely how much revenue your campaigns generate.

Adapty can send all subscription events which are configured in your integration to Singular. As a result, you'll be able to track these events within the Singular dashboard. This integration is beneficial for evaluating the effectiveness of your advertising campaigns.

## How to set up Singular integration

To set up the integration with Singular, go to [Integrations > Singular](https://app.adapty.io/integrations/singular) in your Adapty Dashboard, turn on a toggle, and fill out the fields.

For this integration to work, the Singular SDK Key is required. It can be found in Singular dashboard: Developer tools -> SDK Keys -> SDK Key (**not** SDK Secret):


<Zoom>
  <img src={require('./img/4bc50d1-singular_sdk_key.webp').default}
  style={{
    border: '1px solid #727272', /* border width and color */
    width: '700px', /* image width */
    display: 'block', /* for alignment */
    margin: '0 auto' /* center alignment */
  }}
/>
</Zoom>





Below the credentials, there are three groups of events you can send to Singular from Adapty. Check the full list of the events offered by Adapty [here](events).


<Zoom>
  <img src={require('./img/e67de0c-singular_events.webp').default}
  style={{
    border: '1px solid #727272', /* border width and color */
    width: '700px', /* image width */
    display: 'block', /* for alignment */
    margin: '0 auto' /* center alignment */
  }}
/>
</Zoom>





We recommend using the default event names provided by Adapty. But you can change the event names based on your needs.

Adapty will send subscription events to Singular using a server-to-server integration, allowing you to view all subscription events in your Singular dashboard and link them to your acquisition campaigns.

:::warning
Profiles created prior to configuring the integrations will not be able to deliver their events to Singular. 
:::

## No need for SDK configuration

There is no need to configure the SDK from your side at the moment — as Adapty already collects the data required by Singular and this integration is server-to-server. In case it ever changes, we'll let you know.

## Singular event structure

Adapty sends events to Singular via a GET request using query parameters. Each event is structured like this:

```json
{
  "n": "subscription_renewed",
  "a": "singular_sdk_key_123",
  "p": "iOS",
  "i": "com.example.app",
  "ip": "192.168.100.1",
  "idfa": "00000000-0000-0000-0000-000000000000",
  "idfv": "00000000-0000-0000-0000-000000000000",
  "ve": "17.0.1",
  "att_authorization_status": 3,
  "custom_user_id": "user_12345",
  "utime": 1709294400,
  "amt": 9.99,
  "cur": "USD",
  "purchase_product_id": "yearly.premium.6999",
  "purchase_transaction_id": "GPA.3383...",
  "e": "{\"is_revenue_event\":true,\"amt\":9.99,\"cur\":\"USD\",\"purchase_product_id\":\"yearly.premium.6999\",\"purchase_transaction_id\":\"GPA.3383...\"}"
}
```

Where:

| Parameter                  | Type    | Description                                          |
|:---------------------------|:--------|:-----------------------------------------------------|
| `n`                        | String  | The event name (mapped from Adapty event).           |
| `a`                        | String  | Your Singular SDK Key.                               |
| `p`                        | String  | Platform ("iOS" or "Android").                       |
| `i`                        | String  | Store App ID (Bundle ID).                            |
| `ip`                       | String  | User's IP address.                                   |
| `idfa`                     | String  | **iOS only**. ID for Advertisers (uppercase).        |
| `idfv`                     | String  | **iOS only**. ID for Vendors (uppercase).            |
| `aifa`                     | String  | **Android only**. Google Advertising ID (lowercase). |
| `andi`                     | String  | **Android only**. Android ID (lowercase).            |
| `asid`                     | String  | **Android only**. App Set ID (lowercase).            |
| `ve`                       | String  | OS version.                                          |
| `att_authorization_status` | Integer | **iOS only**. ATT status (e.g., `3` for authorized). |
| `custom_user_id`           | String  | The user's Customer User ID.                         |
| `utime`                    | Long    | UNIX timestamp of the event in seconds.              |
| `amt`                      | Float   | Revenue amount.                                      |
| `cur`                      | String  | Currency code (e.g., "USD").                         |
| `purchase_product_id`      | String  | The Product ID from the store.                       |
| `purchase_transaction_id`  | String  | Original transaction ID.                             |
| `e`                        | String  | JSON string containing event details (see below).    |

The `e` parameter (custom event data) is a JSON-encoded string containing:

| Parameter                 | Type    | Description                           |
|:--------------------------|:--------|:--------------------------------------|
| `is_revenue_event`        | Boolean | `true` if the event contains revenue. |
| `amt`                     | Float   | Revenue amount.                       |
| `cur`                     | String  | Currency code.                        |
| `purchase_product_id`     | String  | The Product ID from the store.        |
| `purchase_transaction_id` | String  | Original transaction ID.              |